# wilds

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
animate/: Cargo.toml
animate/src/: lib.rs  skeletal3d.rs
engine/: Cargo.toml  build.rs  compile-shaders.bat  compile-shaders.sh
engine/blue_noise/: .gitignore
engine/src/: _physics.rs  animate.rs  broker.rs  camera.rs  clocks.rs  config.rs  debug.rs  engine.rs  fps_counter.rs  gltf.rs  lib.rs  light.rs  physics.rs  renderer.rs  resources.rs  scene.rs  util.rs
engine/src/assets/: gltf.rs  image.rs  material.rs  mod.rs  terrain.rs  texture.rs
engine/src/assets/gltf/: image.rs  material.rs  mod.rs  prefab.rs  primitive.rs  sampler.rs  skin.rs  texture.rs
engine/src/camera/: following.rs  free.rs  mod.rs
engine/src/renderer/: assets.rs  context.rs  material.rs  mesh.rs  mod.rs  terrain.rs  texture.rs  vertex.rs  worker.rs
engine/src/renderer/pass/: atrous.rs  combine.rs  diffuse_filter.rs  gauss_filter.rs  mod.rs  pose.rs  raster.rs  ray_probe.rs  rt_prepass.rs  swapchain.rs
engine/src/renderer/pass/atrous/: atrous.vert  atrous0h.frag  atrous0v.frag  atrous1h.frag  atrous1v.frag  atrous2h.frag  atrous2v.frag  atrous_main.glsl
engine/src/renderer/pass/combine/: combine.frag
engine/src/renderer/pass/common/: const.glsl  pbr.glsl  rand.glsl  rayhit.glsl  sh.glsl  shadow.rmiss  viewport.glsl
engine/src/renderer/pass/diffuse_filter/: diffuse_filter.frag
engine/src/renderer/pass/gauss_filter/: gauss_filter.frag
engine/src/renderer/pass/pose/: pose.comp
engine/src/renderer/pass/raster/: main.frag  main.vert
engine/src/renderer/pass/ray_probe/: compile.comp  descriptors.glsl  primary.rchit  primary.rmiss  probes.glsl  probes.rgen  viewport.rgen
engine/src/renderer/pass/rt_prepass/: descriptors.glsl  diffuse.rchit  diffuse.rmiss  hithelpers.glsl  prepass.rchit  prepass.rgen  prepass.rmiss  primary.rchit  primary.rgen  primary.rmiss  raycommon.glsl  rayhelpers.glsl  viewport.rgen
engine/src/renderer/pipeline/: mod.rs  path_trace.rs  raster.rs  ray_probe.rs  rayprobe.rs
engine/src/shaders/: prepass.rchit  prepass.rchit.spv  prepass.rgen  prepass.rgen.spv  prepass.rmiss  prepass.rmiss.spv  raycommon.glsl  rayhelpers.glsl  shadow.rmiss  shadow.rmiss.spv
engine/src/util/: blist.rs  mod.rs
erupt/: Cargo.toml
erupt/src/: access.rs  command.rs  convert.rs  descriptor.rs  device.rs  handle.rs  lib.rs  physical.rs  queue.rs  swapchain.rs
fastbitset/: Cargo.toml
fastbitset/src/: boxed.rs  bump.rs  lib.rs
game/: Cargo.toml  cfg.ron
game/src/: config.rs  construct.rs  main.rs  pawn.rs  player.rs  sky.rs  sun.rs  terrain.rs
game/src/building/: mod.rs
ik/: Cargo.toml
ik-demo/: Cargo.toml
illume/: Cargo.toml
illume/src/: accel.rs  buffer.rs  command.rs  convert.rs  descriptor.rs  device.rs  encode.rs  fence.rs  format.rs  framebuffer.rs  graphics.rs  image.rs  lib.rs  memory.rs  physical.rs  queue.rs  render_pass.rs  resource.rs  sampler.rs  semaphore.rs  shader.rs  surface.rs  view.rs
illume/src/backend/: mod.rs
illume/src/backend/vulkan/: access.rs  convert.rs  descriptor.rs  device.rs  encode.rs  graphics.rs  mod.rs  physical.rs  queue.rs  resources.rs  surface.rs  swapchain.rs
illume/src/backend/wgpu/: device.rs  graphics.rs  mod.rs  mod.toml  physical.rs  surface.rs
illume/src/descriptor/: layout.rs  mod.rs
illume/src/encode/: mod.rs
illume/src/pipeline/: compute.rs  graphics.rs  mod.rs  ray_tracing.rs
illume/src/surface/: mod.rs  swapchain.rs
license/: APACHE  MIT
noise/: Cargo.toml
noise/src/: canvas.rs  lib.rs
tvma/: .gitignore  Cargo.toml  README.md
tvma/src/: block.rs  chunked.rs  dedicated.rs  error.rs  lib.rs  linear.rs  usage.rs
webgl/: Cargo.toml
webgl/src/: convert.rs  device.rs  handle.rs  image.rs  lib.rs  physical.rs  queue.rs  swapchain.rs
