[package]
name = "wilds"
version = "0.1.0"
authors = ["Zakarum <zakarumych@ya.ru>"]
edition = "2018"

[features]
# Graphics backend

# Image formats support

[dependencies]
# Assets
goods = { version = "0.6", features = ["fs", "tokio-spawn", "data-url", "trace"] }
gltf = "0.15"

# Physics
ncollide3d = "=0.24"
nphysics3d = "0.17"

# Graphics
illume = { path = "../illume", features = ["serde-1"] }
genmesh = { version = "0.6", optional = true }
palette = { version = "0.5", default-features = false, features = ["std"] }
image = { version = "0.23", features = ["png"] }
png = "0.16"

# ECS
hecs = "0.2"

# Linear algebra
nalgebra = "=0.22"

# Windowing
winit = "0.22" # "0.22.2"

# Low-Level
bytemuck = "1.4"
byteorder = "1.3"
bumpalo = { version = "3.4", features = ["collections"] }
once_cell = "1.4"
parking_lot = "0.11"

# Error handling
eyre = "0.6"
color-eyre = "0.5"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
ron = "0.6"

# Tracing and profiling
tracing = { version = "0.1", features = ["log"] }
# puffin = "0.2"

# Support
fastbitset = { path = "../fastbitset", features = ["boxed", "bump"] }
cfg-if = "0.1"
futures = "0.3"
lazy_static = "1.4"
flume = { version = "0.9", features = ["async"] }
ordered-float = "2.0"
num-traits = "0.2"
smallvec = "1.4"
bitflags = "1.2"
ahash = "0.4"
type-map = "0.3"
lru = "0.6"
url = "2.1"
rand = "0.7"

# TEMP
# stats_alloc = "*"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "0.2", features = ["macros", "rt-threaded", "blocking"] }


[build-dependencies]
eyre = "0.6"
tracing = "0.1"
image = "0.23"
bytemuck = "1.4"
