[package]
name = "wilds"
version = "0.1.0"
authors = ["Zakarum <zakarumych@ya.ru>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "../README.md"

[features]
# Graphics backend

# Image formats support

[dependencies]
# Assets
goods = { version = "0.7.1", features = ["fs", "smol-spawn", "data-url", "trace", "ron-format"] }
#goods = { version = "0.8", features = ["trace"] }
#goods-ron = { version = "0.1" }
#goods-fs = { version = "0.1" }

gltf = "0.15"

# Physics
parry3d = "=0.1"
rapier3d = "0.5"

# Graphics
illume = { path = "../illume", features = ["serde-1"] }
genmesh = { version = "0.6", optional = true }
palette = { version = "0.5", default-features = false, features = ["std"] }
image = { version = "0.23", features = ["png"] }
png = "0.16"

# ECS
hecs = "0.3"

# Linear algebra
nalgebra = "=0.24"

# Inverse Kinematics
# ik = { version = "*", path = "../ik" }

# Windowing
winit = "0.24"

# Low-Level
bytemuck = "1.4"
byteorder = "1.3"
bumpalo = { version = "3.4", features = ["collections"] }
once_cell = "1.4"
parking_lot = "0.11"

# Error handling
eyre = "0.6"
color-eyre = "0.5"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_bytes = "0.11"
ron = "0.6"

# Tracing and profiling
tracing = { version = "0.1" }
tracing-futures = { version = "0.2" }
# puffin = "0.2"

# Support
fastbitset = { path = "../fastbitset", features = ["boxed", "bump"] }
cfg-if = "1.0"
futures = "0.3"
lazy_static = "1.4"
flume = { version = "0.10", features = ["async"] }
ordered-float = "2.0"
num-traits = "0.2"
smallvec = "1.4"
bitflags = "1.2"
ahash = "0.6"
type-map = "0.4"
lru = "0.6"
url = "2.0"
rand = "0.8"
wilds-noise = { version = "0.1.0", path = "../noise" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
smol = { version = "1.0" }

[build-dependencies]
eyre = "0.6"
tracing = "0.1"
image = "0.23"
bytemuck = "1.5"
