[package]
name = "illume-erupt"
version = "0.1.0"
authors = ["Zakarum <zakarumych@ya.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
shader-compiler = ["shaderc"]

[dependencies]
illume = { version = "0.1", path = "../illume" }
erupt = "0.10"
smallvec = "1.4"
tvma = { path = "../tvma" }
slab = "0.4"
tracing = { version = "0.1.15" }
raw-window-handle = "0.3"
libloading = "0.6"
lazy_static = "1.4"
thiserror = "1.0"
bumpalo = { version = "3.4", features = ["collections", "boxed"] }
shaderc = { version = "0.6", optional = true }
parking_lot = "0.11"
