[package]
name = "wilds-game"
version = "0.1.0"
authors = ["Zakarum <zakarumych@ya.ru>"]
edition = "2018"
publish = false
license = "MIT OR Apache-2.0"
readme = "../README.md"

[dependencies]
hecs = "0.3"
wilds = { path = "../engine", features = ["genmesh"] }

bumpalo = { version = "3.4", features = ["collections"] }
eyre = "0.6"
color-eyre = "0.5"
serde = { version = "1.0", features = ["derive"] }
ron = "0.6"
tracing = "0.1"
winit = { version = "0.24", features = ["serde"] }
bytemuck = "1.4"
ncollide3d = "=0.27"
nalgebra = "0.24"
tracing-subscriber = { version = "0.2", features = ["fmt", "env-filter"] }
tracing-error = { version = "0.1" }
genmesh = { version = "0.6" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["time"] }
