[package]
name = "ik-demo"
version = "0.1.0"
authors = ["Zakarum <zakarumych@ya.ru>"]
edition = "2018"
publish = false

[dependencies]
ik = { version = "0.1", path = "../ik" }
wilds = { version = "0.1", path = "../engine" }
winit = { version = "0.24" }
eyre = "0.6"
jane-eyre = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-error = "0.1"
smallvec = "1.0"
nalgebra = "0.24"
