[package]
name = "illume"
version = "0.1.0"
authors = ["zakarum"]
edition = "2018"

[features]
serde-1 = ["serde", "serde_bytes", "smallvec/serde", "ordered-float/serde"]

[dependencies]
bitflags = "1.2"
raw-window-handle = "0.3"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_bytes = { version = "0.11", optional = true }
smallvec = "1.4"
thiserror = "1.0"
tracing = "0.1"
ordered-float = "2.0"
ultraviolet = { version = "0.4", optional = true }

bytemuck = "1.2"
