[package]
name = "illume"
version = "0.1.0"
authors = ["zakarum"]
edition = "2018"

[features]
shader-compiler = ["shaderc"]
serde-1 = ["serde", "serde_bytes", "smallvec/serde", "ordered-float/serde"]

[dependencies]
bitflags = "1.2"
raw-window-handle = "0.3"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_bytes = { version = "0.11", optional = true }
smallvec = "1.4"
thiserror = "1.0"
tracing = "0.1"
ordered-float = "2.0"
ultraviolet = { version = "0.4", optional = true }
bytemuck = "1.3"
shaderc = { version = "0.6", optional = true }
erupt = "0.10"
tvma = { path = "../tvma" }
slab = "0.4"
libloading = "0.6"
lazy_static = "1.4"
bumpalo = { version = "3.4", features = ["collections", "boxed"] }
parking_lot = "0.11"
once_cell = "1.4"
