[package]
name = "tvma"
version = "0.1.0"
authors = ["zakarum"]
edition = "2018"

[dependencies]
fastbitset = { path = "../fastbitset" }
erupt = { version = "0.10", default-features = false }
tinyvec = "0.3"
parking_lot = "0.11"
slab = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }
tracing = "0.1"
bitflags = "1.2"
