[package]
name = "tvma"
version = "0.1.0"
authors = ["zakarum"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
fastbitset = { path = "../fastbitset", features = ["boxed"] }
erupt = { version = "0.15", default-features = false }
tinyvec = "1.0"
parking_lot = "0.11"
slab = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }
tracing = "0.1"
bitflags = "1.2"
